[package]
name = "rtsonlib"
version = "0.2.15"

[dependencies]
#rustr = "0.1"
rustr = { git = "https://github.com/tercen/rustr", tag = "0.1.11" }
#rustr = { path = "../rustr" }
rustson = { git = "https://github.com/tercen/rustson", tag = "0.2.15" }
#rustson = { path = "../rustson" }

[lib]
name = "rtsonlib"
crate-type = ["staticlib","rlib"]
